// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots channels/ChannelItem App View 1`] = `
<div
  id="root"
>
  <div
    class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1i06p90-MuiListItem-root"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
      >
        <div
          class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault makeStyles-colorAvatar makeStyles-colorAvatar css-kz5aim-MuiAvatar-root"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiAvatar-fallback css-10mi8st-MuiSvgIcon-root-MuiAvatar-fallback"
            data-testid="PersonIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
            />
          </svg>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline makeStyles-root css-konndc-MuiListItemText-root"
        >
          <div
            class="MuiBox-root css-70qvj9"
          >
            <div
              class="MuiBox-root css-1xsd608"
            >
              edge
            </div>
          </div>
          <div
            class="MuiBox-root css-15aqakd"
          >
            <div
              class="MuiBox-root css-0"
            >
              1.11.3 (ARM64)
            </div>
            <div
              class="MuiBox-root css-n085mf"
            >
              <div
                class="MuiBox-root css-k008qs"
              >
                <div
                  class="MuiBox-root css-0"
                >
                  <svg
                    aria-hidden="true"
                    aria-label="Release date"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                    data-mui-internal-clone-element="true"
                    data-testid="ScheduleIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2M12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8"
                    />
                    <path
                      d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
                    />
                  </svg>
                </div>
                <div
                  class="MuiBox-root css-1iuj5ih"
                >
                  07/18/2019
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots channels/ChannelItem No Arch 1`] = `
<div
  id="root"
>
  <div
    class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1i06p90-MuiListItem-root"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
      >
        <div
          class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault makeStyles-colorAvatar makeStyles-colorAvatar css-kz5aim-MuiAvatar-root"
        >
          e
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline makeStyles-root css-konndc-MuiListItemText-root"
        >
          <div
            class="MuiBox-root css-70qvj9"
          >
            <div
              class="MuiBox-root css-1xsd608"
            >
              edge
            </div>
          </div>
          <div
            class="MuiBox-root css-15aqakd"
          >
            <div
              class="MuiBox-root css-0"
            >
              1.11.3
            </div>
            <div
              class="MuiBox-root css-n085mf"
            >
              <div
                class="MuiBox-root css-k008qs"
              >
                <div
                  class="MuiBox-root css-0"
                >
                  <svg
                    aria-hidden="true"
                    aria-label="Release date"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                    data-mui-internal-clone-element="true"
                    data-testid="ScheduleIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2M12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8"
                    />
                    <path
                      d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
                    />
                  </svg>
                </div>
                <div
                  class="MuiBox-root css-1iuj5ih"
                >
                  07/18/2019
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots channels/ChannelItem No Package 1`] = `
<div
  id="root"
>
  <div
    class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1i06p90-MuiListItem-root"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
      >
        <div
          class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault makeStyles-colorAvatar makeStyles-colorAvatar css-kz5aim-MuiAvatar-root"
        >
          e
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline makeStyles-root css-konndc-MuiListItemText-root"
        >
          <div
            class="MuiBox-root css-70qvj9"
          >
            <div
              class="MuiBox-root css-1xsd608"
            >
              edge
            </div>
          </div>
          <div
            class="MuiBox-root css-15aqakd"
          >
            <div
              class="MuiBox-root css-0"
            >
              No package
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots channels/ChannelItem Show Arch 1`] = `
<div
  id="root"
>
  <div
    class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1i06p90-MuiListItem-root"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
      >
        <div
          class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault makeStyles-colorAvatar makeStyles-colorAvatar css-kz5aim-MuiAvatar-root"
        >
          e
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline makeStyles-root css-konndc-MuiListItemText-root"
        >
          <div
            class="MuiBox-root css-70qvj9"
          >
            <div
              class="MuiBox-root css-1xsd608"
            >
              edge
            </div>
          </div>
          <div
            class="MuiBox-root css-15aqakd"
          >
            <div
              class="MuiBox-root css-0"
            >
              1.11.3 (ARM64)
            </div>
            <div
              class="MuiBox-root css-n085mf"
            >
              <div
                class="MuiBox-root css-k008qs"
              >
                <div
                  class="MuiBox-root css-0"
                >
                  <svg
                    aria-hidden="true"
                    aria-label="Release date"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                    data-mui-internal-clone-element="true"
                    data-testid="ScheduleIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2M12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8"
                    />
                    <path
                      d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
                    />
                  </svg>
                </div>
                <div
                  class="MuiBox-root css-1iuj5ih"
                >
                  07/18/2019
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
